tests/files/type_checker_tests/should_fail/203.cmdr
//Should fail when defining pre-existing variables
x = 3;
alias x = ls;
